--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -16,6 +16,14 @@
         android:layout_height="wrap_content"
         android:text="사진 찍기"
         android:onClick="onClickPhotoButton" />
+    <TextView
+        android:id="@+id/resultTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="">
+
+    </TextView>
+
 
 
 
