--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -63,24 +63,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:background="#ffffff"
-        android:orientation="horizontal">
+        android:layout_marginTop="-10dp">
 
 
         <ImageButton
-            android:id="@+id/bt_b2"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:id="@+id/bt_b1"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_margin="12dp"
             android:background="#00ffffff"
             android:scaleType="fitCenter"
             android:src="@drawable/button_3" />
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1" />
+
         <ImageButton
-            android:id="@+id/bt_b3"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:id="@+id/bt_b2"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_margin="12dp"
             android:background="#00ffffff"
             android:scaleType="fitCenter"
@@ -89,4 +92,3 @@
     </LinearLayout>
 
 </LinearLayout>
-
