--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginTop="-50dp">
+        android:layout_marginTop="-30dp">
 
 
         <ImageButton
@@ -74,11 +74,12 @@
         android:layout_height="wrap_content">
 
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/bottom"
-            android:layout_marginBottom="00dp"/>
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="-120dp"
+        android:src="@drawable/bottom" />
 
 </LinearLayout>
